smtp4dev/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: smtp4dev
  name: smtp4dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smtp4dev
  template:
    metadata:
      labels:
        app: smtp4dev
    spec:
      containers:
      - image: rnwood/smtp4dev
        name: smtp4dev
        ports:
        - name: tcp
          containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: smtp4dev
spec:
  selector:
    app: smtp4dev
  type: ClusterIP
  ports:
  - name: tcp
    port: 3000
    targetPort: 80
  - name: smtp
    port: 25
    targetPort: 25
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: smtp4dev
spec:
  hosts:
  - "mail.digisense.dev"
  gateways:
  - istio-system/gateway
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: smtp4dev.smtp.svc.cluster.local
        port:
          number: 3000
  tcp:
  - match:
    - port: 25
    route:
    - destination:
        host: smtp4dev.smtp.svc.cluster.local
        port:
          number: 25
